# factify

data-exploration/philipp-faktenfinder-1/: README.md  main.ipynb  pyproject.toml
frontend/factify/: .gitignore  README.md  pubspec.yaml
frontend/factify/android/app/: build.gradle.kts
frontend/factify/android/app/src/main/: AndroidManifest.xml
frontend/factify/android/app/src/main/kotlin/com/example/factify/: MainActivity.kt
frontend/factify/ios/Runner/: Info.plist
frontend/factify/ios/Runner.xcodeproj/: project.pbxproj
frontend/factify/lib/: main.dart
frontend/factify/linux/: CMakeLists.txt
frontend/factify/linux/runner/: my_application.cc
frontend/factify/macos/Runner.xcodeproj/: project.pbxproj
frontend/factify/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/factify/macos/Runner/Configs/: AppInfo.xcconfig
frontend/factify/test/: widget_test.dart
frontend/factify/web/: index.html  manifest.json
frontend/factify/windows/: CMakeLists.txt
frontend/factify/windows/runner/: Runner.rc  main.cpp
